--- a/thesis.tex
+++ b/thesis.tex
@@ -147,7 +147,7 @@ I would like to thank all members of both the Eisenhaber research group, as well
 %\clearpage
 \afterpreface{}
 
-\pagenumbering{arabic}
+%\pagenumbering{arabic}
 
 %This is where we call the chapters. No need to include ".tex". The chapters will be printed to the document in this order. To create a new chapter, make a new file, and add the name of the file below (without the file extension).
 \input{chapter_introduction}
