--- a/references.bib
+++ b/references.bib
@@ -85,6 +85,26 @@ url = {http://www.ncbi.nlm.nih.gov/pubmed/18667436 http://www.pubmedcentral.nih.
 volume = {283},
 year = {2008}
 }
+@article{Linding2003,
+abstract = {A major challenge in the proteomics and structural genomics era is to predict protein structure and function, including identification of those proteins that are partially or wholly unstructured. Non-globular sequence segments often contain short linear peptide motifs (e.g. SH3-binding sites) which are important for protein function. We present here a new tool for discovery of such unstructured, or disordered regions within proteins. GlobPlot (http://globplot.embl.de) is a web service that allows the user to plot the tendency within the query protein for order/globularity and disorder. We show examples with known proteins where it successfully identifies inter-domain segments containing linear motifs, and also apparently ordered regions that do not contain any recognised domain. GlobPlot may be useful in domain hunting efforts. The plots indicate that instances of known domains may often contain additional N- or C-terminal segments that appear ordered. Thus GlobPlot may be of use in the design of constructs corresponding to globular proteins, as needed for many biochemical studies, particularly structural biology. GlobPlot has a pipeline interface--GlobPipe--for the advanced user to do whole proteome analysis. GlobPlot can also be used as a generic infrastructure package for graphical displaying of any possible propensity.},
+author = {Linding, Rune and Russell, Robert B. and Neduva, Victor and Gibson, Toby J.},
+doi = {10.1093/nar/gkg519},
+file = {::},
+isbn = {1362-4962 (Electronic)$\backslash$n0305-1048 (Linking)},
+issn = {03051048},
+journal = {Nucleic Acids Research},
+keywords = {amino acids,datasets,internet,peptides,protein structure,proteomics},
+month = {jul},
+number = {13},
+pages = {3701--3708},
+pmid = {12824398},
+publisher = {Oxford University Press},
+title = {{GlobPlot: Exploring protein sequences for globularity and disorder}},
+url = {https://academic.oup.com/nar/article-lookup/doi/10.1093/nar/gkg519},
+volume = {31},
+year = {2003}
+}
+
 @article{Rabu2009,
 abstract = {Tail-anchored proteins are a distinct class of integral membrane proteins located in several eukaryotic organelles, where they perform a diverse range of functions. These proteins have in common the C-terminal location of their transmembrane anchor and the resulting post-translational nature of their membrane insertion, which, unlike the co-translational membrane insertion of most other proteins, is not coupled to ongoing protein synthesis. The study of tail-anchored proteins has provided a paradigm for understanding the components and pathways that mediate post-translational biogenesis of membrane proteins at the endoplasmic reticulum. In this Commentary, we review recent studies that have converged at a consensus regarding the molecular mechanisms that underlie this process--namely, that multiple pathways underlie the biogenesis of tail-anchored proteins at the endoplasmic reticulum.},
 author = {Rabu, C. and Schmid, V. and Schwappach, B. and High, S.},
